scss/text-field.scss
// Compatibility
// Chrome - 94 (2021-09-21)
// Edge - 94 (2021-09-24)
// Firefox - 88 (2021-04-19)
// Opera - 80 (2021-10-05)
// Safari - 16.4 (2023-03-27)

.m3-text-field {
  display: flex;
  position: relative;
  height: fit-content;
  min-height: 56px;
  background-color: inherit;
  box-sizing: border-box;
  flex-flow: column;

  // background
  &::before {
    display: block;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    height: 56px;
    content: "";
    border-radius: var(--m3--shape-extra-small);
    outline: 1px solid var(--m3--outline);
    outline-offset: -1px;
    transition: outline-color 100ms var(--m3--easing-emphasized);
  }

  &:has(input:focus-visible)::before {
    outline-color: var(--m3--primary);
    outline-width: 2px;
    outline-offset: -2px;
  }

  &:hover::before {
    outline-color: var(--m3--on-surface);
  }

  // leading, trailing
  & > &--leading, & > &--trailing {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
  }

  & > &--leading.m3-sym,
  & > &--trailing.m3-sym {
    width: 24px;
    height: 24px;
    color: var(--m3--on-surface-variant);
    font-size: 24px;
    margin-block: 16px;
    user-select: none;
  }

  & > &--leading.m3-icon-button,
  & > &--trailing.m3-icon-button {
    margin-block: 4px;
  }

  // leading
  & > &--leading.m3-sym {
    margin-inline: 12px 0;
  }

  // trailing
  & > &--trailing {
    margin-inline-start: auto;
  }

  & > &--trailing.m3-sym {
    margin-inline-end: 12px;
  }

  // label
  & > &--label {
    display: -webkit-box;
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: fit-content;
    height: fit-content;
    background-color: inherit;
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    margin-block: 0;
    margin-inline: 16px;
    overflow: hidden;
    padding-inline: 4px;
    transform: translateY(-50%);
    transition: margin-left 100ms var(--m3--easing-emphasized),
    margin-right 100ms var(--m3--easing-emphasized),
    margin-top 100ms var(--m3--easing-emphasized),
    margin-bottom 100ms var(--m3--easing-emphasized),
    padding-left 100ms var(--m3--easing-emphasized),
    padding-right 100ms var(--m3--easing-emphasized),
    background-color 100ms var(--m3--easing-emphasized),
    color 100ms var(--m3--easing-emphasized),
    font-size 100ms var(--m3--easing-emphasized),
    line-height 100ms var(--m3--easing-emphasized),
    transform 100ms var(--m3--easing-emphasized);
    user-select: none;
    -webkit-box-orient: vertical;
    -webkit-line-clamp: 1;
  }

  &:has(input:focus-visible) > &--label {
    color: var(--m3--primary);
  }

  &:hover > &--label {
    color: var(--m3--on-surface);
  }

  &#{&}__unpopulated > &--label {
    background-color: transparent;
    font-size: 16px;
    line-height: 52px;
    margin-block: 2px;
    margin-inline: 16px;
    padding-inline: 0;
    transform: translateY(0);
  }

  &#{&}__unpopulated > &--leading ~ &--label {
    margin-inline-start: 52px; // 12 + 24 + 16
  }

  &#{&}__unpopulated > &--trailing ~ &--label {
    margin-inline-end: 52px; // 16 + 24 + 12
  }

  // supporting text
  & > &--support {
    position: relative;
    color: var(--m3--on-surface-variant);
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 12px;
    font-weight: 400;
    line-height: 16px;
    margin-block: 56px 0;
    padding-block: 4px;
    padding-inline: 16px;
  }

  // input
  & > input {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 56px;
    appearance: none;
    background: transparent;
    border: none;
    box-sizing: border-box;
    caret-color: var(--m3--primary);
    color: var(--m3--on-surface);
    font-family: Roboto, "Helvetica Neue", sans-serif;
    font-size: 16px;
    font-weight: 400;
    line-height: 24px;
    outline: none;
    padding-block: 0;
    padding-inline: 16px;
    transition: padding-left 100ms var(--m3--easing-emphasized),
    padding-right 100ms var(--m3--easing-emphasized);
  }

  & > &--leading ~ input {
    padding-inline-start: 52px;
  }

  & > &--trailing ~ input {
    padding-inline-end: 52px;
  }

  &__unpopulated {
    // placeholders, leave empty
  }
}

